[package]
name = "which_option"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version = "0.14", features = ["canvas", "tokio"]}
nalgebra = "0.34.1"
statrs = "0.18.0"
plotters="0.3"
plotters-iced2 = "0.14"
rust_decimal = {version = "1.39.0", features = ["macros"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
open = "5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = {version = "0.14", features = ["canvas", "tokio", "image", "debug", "webgl"]}
getrandom = { version = "0.2", features = ["js"] }

console_error_panic_hook = "0.1"
console_log = "1.0"

# Reduce size of wasm binary as small as possible
[profile.website]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

